 $Id: ChangeLog,v 1.131.2.25.2.30 2009/12/21 10:00:12 uehira Exp $

2009-12-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wdisk : 64 bit clean?
	* 2nd arg of shmat() : (void *)0

2009-12-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/order : 64 bit clean?
	* time(0) --> time(NULL)
	* 65536 --> WIN_CHMAX

2009-12-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF head. Just imported the following sources.
	* src/winrandsimu6.c : added WIN random simulater, real-time version.
	* src/select_bylatlon.c : added.
	* Version 2.0.7 released.

2009-08-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/shmdump : avoid stack memory overflow. (exp. MacOSX, OBS266)

2009-08-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winadd : 64 bit clean?
	* src/evdetect.c : added. Another version of event detect.
	* Version 2.0.6 released.

2009-07-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wchch : 64 bit clean
	* src/wch : 64 bit clean
	* src/wchasn : 64 bit check
	* src/win2raw : 64 bit check

2009-07-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/raw2mon : 64 bit clean
	* src/winlib.h : added get_mon(), compress_mon(), make_mon().

2009-03-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.19) : 
	  define_bm(lBitmap *, char, int, int, char *);	--> 
	       define_bm(lBitmap *, char, unsigned int, unsigned int, char *);
	  width_dpy,height_dpy : int --> unsigned int
	
2009-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.18) : remove unused variables.
	
2009-03-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.17) : make prototypes.
	
2009-03-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus4.c src/ls7000_A9 : fixed bug.

2009-03-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.9) : MAP mode reactivate.
	* Version 2.0.5 released.

2009-03-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus4, ls7000_A8, ls7000_A9 : added.